--- a/tests/python_tests/requirements.txt
+++ b/tests/python_tests/requirements.txt
@@ -1,10 +1,10 @@
 --extra-index-url https://download.pytorch.org/whl/cpu
 diffusers==0.32.2
-optimum-intel @ git+https://github.com/huggingface/optimum-intel.git@main
+# optimum-intel @ git+https://github.com/huggingface/optimum-intel.git@main
 numpy<2.0.0; platform_system == "Darwin" and platform_machine == "x86_64"
 onnx==1.17.0
-pytest
-pytest-html
+# pytest
+# pytest-html
 hf_transfer
 
 # requirements for specific models
